Update README with penalty value usage
Added instructions for penalty value in README.